@@ -181,7 +181,7 @@ sub _gen_default_filedata {
       "generated_by": "Leon Timmermans",
       "dynamic_config": 1,
       "meta-spec": {
-        "url": "https://metacpan.org/pod/CPAN::Meta::Spec",
+        "url": "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
         "version": 2.0
       },
       "release_status": "stable",
