@@ -1,6 +1,7 @@
 Revision history for Dist-Build
 
 {{$NEXT}}
+          - Add Dist::Build::DynamicPrereqs
           - Rename main_module_name to main_module
           - Add default module to module_sharedir in Dist::Build::ShareDir
           - Rename the dist_name delegate to distribution
